# task-cli

./: .gitignore  README.md  TODO.MD  pyproject.toml
src/domain/: task.py
src/task_cli/: main.py
src/task_cli/domain/: dtos.py  exceptions.py  task.py  task_manager.py
src/task_cli/infrastructure/: config.py  enums.py  factories.py
src/task_cli/repository/: mappers.py  task_repository.py
src/task_cli/ui/: command_interface.py  formatters.py  ui_cli.py
src/task_cli/ui/messages/: commands.py  error_messages.py
tests/domain/: test_dtos.py  test_task.py  test_task_manager.py
tests/fakes/: fake_config.py  fake_descriptions.py  fake_dtos.py  fake_repository.py
tests/repository/: test_task_repository.py
tests/ui/: test_command_interface.py
