[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-cli"
version = "0.1.0"
description = "Una app de comandos para manejar tareas"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Vicente", email = "muruamedina@gmail.com"}
]
dependencies = [
    "platformdirs>=4.5.1",
]
[dependency-groups]
dev =[
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
[project.scripts]
# Esto permite que al escribir 'task-cli' en la terminal se ejecute tu app
# Asume que en main.py tienes una función llamada def main():
task-cli = "task_cli.main:main"
[tool.pytest.ini_options]
# Configura pytest para que siempre use coverage y busque en la carpeta src
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
# Solo queremos medir el código de la app, no los tests ni los fakes
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
    "src/task_cli/ui/formatters.py",
    "src/task_cli/main.py",
    "src/task_cli/domain/exceptions.py",
]

[tool.coverage.report]
# Aquí está la magia: esto le dice a coverage que NO cuente estas líneas como "faltantes"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "pass",
    "@(abc\\.)?abstractmethod",
]
[tool.hatch.build.targets.wheel]
# Hatch encontrará la carpeta task_cli automáticamente en la raíz
packages = ["src/task_cli"]
